added uploading images to the server when creating a post, and displayed images with posts on the main page

--- a/assets/css/admin.sass
+++ b/assets/css/admin.sass
@@ -19,7 +19,7 @@ h5,
 h6
 	color: $gray
 
-input, textarea, button, select
+input:not([type="checkbox"]), textarea, button, select
 	padding: 10px 15px !important
 	width: 100% !important
 	font-size: 14px !important
