--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -17,13 +17,13 @@ h6 {
   color: #5c5b5b;
 }
 
-input, textarea, button, select {
+input:not([type=checkbox]), textarea, button, select {
   padding: 10px 15px !important;
   width: 100% !important;
   font-size: 14px !important;
   border-radius: 0 !important;
 }
-input:focus, textarea:focus, button:focus, select:focus {
+input:not([type=checkbox]):focus, textarea:focus, button:focus, select:focus {
   border-color: #008484 !important;
   -webkit-box-shadow: none !important;
           box-shadow: none !important;
