added post status indication when creating and editing a post, added post status changes on the post list page

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -205,3 +205,8 @@ main > .content {
   width: auto !important;
   font-size: inherit !important;
 }
+
+.posts-table select {
+  padding: 6px 10px !important;
+  width: auto !important;
+}
