--- a/assets/css/admin.sass
+++ b/assets/css/admin.sass
@@ -181,3 +181,10 @@ main
 	padding: inherit !important
 	width: auto !important
 	font-size: inherit !important
+	
+	
+	
+.posts-table
+	select
+		padding: 6px 10px !important
+		width: auto !important
