--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,14 @@ input:focus, textarea:focus {
           box-shadow: none !important;
 }
 
+blockquote {
+  margin: 12px 0;
+  padding: 0 12px;
+  display: block;
+  border-left: 4px solid #006669;
+  background: transparent;
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -182,6 +190,7 @@ main {
 }
 .posts .post__img {
   padding: 0;
+  max-height: 174px;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -361,6 +370,13 @@ footer .footer-bottom {
   height: 400px;
   -o-object-fit: cover;
      object-fit: cover;
+}
+.single_post__text a {
+  color: #006669;
+  text-decoration: underline;
+}
+.single_post__text a:hover {
+  text-decoration: none;
 }
 
 .auth-reg .title {
