--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -2,6 +2,7 @@ $gray: #5c5b5b
 $bg: #f6f6f6
 $green: #008484
 $green-hover: #006669
+$red: #D00A00
 
 
 body
@@ -353,3 +354,18 @@ footer
 		&.active
 			border-color: $green !important
 			background-color: $green !important
+			
+			
+// Комментарии
+.comments
+	&-blocked
+		padding: 20px
+		border-left-color: $red
+		background-color: #fff
+		p
+			margin: 0
+		a
+			color: $green
+			text-decoration: underline
+			&:hover
+				text-decoration: none
