--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -81,7 +81,24 @@ header .logo {
   font-size: 22px;
   font-weight: bold;
 }
-header .menu {
+header .navbar {
+  padding: 0;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+header .navbar-toggler {
+  padding: 0;
+  border: none;
+}
+header .navbar-toggler:focus {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+header .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'><path stroke='rgba%28255, 255, 255, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/></svg>");
+}
+header .navbar .navbar-nav {
   margin: 0;
   padding-left: 0;
   list-style: none;
@@ -90,15 +107,16 @@ header .menu {
   display: flex;
   grid-gap: 20px;
 }
-header .menu__item {
+header .navbar .navbar-nav .nav-item {
   position: relative;
 }
-header .menu__item:hover > .menu {
+header .navbar .navbar-nav .nav-item:hover > .navbar-nav {
   opacity: 1;
   visibility: visible;
 }
-header .menu__item a {
+header .navbar .navbar-nav .nav-item a {
   padding: 8px 0 4px;
+  color: #fff !important;
   font-size: 15px;
   display: inline-block;
   background-image: -webkit-gradient(linear, left top, right top, from(#fff), to(#fff));
@@ -109,27 +127,29 @@ header .menu__item a {
   -webkit-transition: all 200ms ease-in-out;
   transition: all 200ms ease-in-out;
 }
-header .menu__item a:hover {
+header .navbar .navbar-nav .nav-item a:hover {
   background-size: 100% 2px;
 }
-header .menu__item .menu {
-  padding: 15px 10px 15px;
-  position: absolute;
-  left: -10px;
-  width: 150px;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  grid-gap: 0;
-  background: #008484;
-  -webkit-transition: all 200ms ease-in-out;
-  transition: all 200ms ease-in-out;
-  opacity: 0;
-  visibility: hidden;
+header .navbar .navbar-nav .dropdown-menu {
+  padding: 10px 10px 15px;
+  border-radius: 0;
+  border-color: transparent;
+  background-color: #008484;
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
-header .menu__item .menu__item a {
+header .navbar .navbar-nav .dropdown-menu li + li {
+  margin-top: 4px;
+}
+header .navbar .navbar-nav .dropdown-menu li:hover, header .navbar .navbar-nav .dropdown-menu li:focus {
+  background-color: transparent !important;
+}
+header .navbar .navbar-nav .dropdown-item {
   font-size: 13px;
+  display: inline-block !important;
+}
+header .navbar .navbar-nav .dropdown-item:hover, header .navbar .navbar-nav .dropdown-item:focus {
+  background-color: transparent !important;
 }
 
 main {
@@ -211,9 +231,9 @@ main > .content {
   font-size: inherit !important;
 }
 
-.posts-table th, .posts-table td {
+.table th, .table td {
   vertical-align: middle;
 }
-.posts-table select {
+.table select {
   padding: 6px 10px !important;
 }
