--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -75,43 +75,59 @@ header
 	.logo
 		font-size: 22px
 		font-weight: bold
-		
-	.menu
-		margin: 0
-		padding-left: 0
-		list-style: none
-		display: flex
-		grid-gap: 20px
-		&__item
-			position: relative
-			&:hover > .menu
-				opacity: 1
-				visibility: visible
-			a
-				padding: 8px 0 4px
-				font-size: 15px
-				display: inline-block
-				background-image: linear-gradient(to right, #fff, #fff)
-				background-repeat: no-repeat
-				background-size: 0 2px
-				background-position: left bottom
-				transition: all 200ms ease-in-out
-				&:hover
-					background-size: 100% 2px
-			.menu
-				padding: 15px 10px 15px
-				position: absolute
-				left: -10px
-				width: 150px
-				flex-direction: column
-				grid-gap: 0
-				background: $green
-				transition: all 200ms ease-in-out
-				opacity: 0
-				visibility: hidden
-				&__item
-					a
-						font-size: 13px
+	.navbar
+		padding: 0
+		justify-content: space-between
+		&-toggler
+			padding: 0
+			border: none
+			&:focus
+				box-shadow: none
+			&-icon
+				background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'><path stroke='rgba%28255, 255, 255, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/></svg>")
+		.navbar-nav
+			margin: 0
+			padding-left: 0
+			list-style: none
+			display: flex
+			grid-gap: 20px
+			.nav-item
+				position: relative
+				&:hover > .navbar-nav
+					opacity: 1
+					visibility: visible
+				a
+					padding: 8px 0 4px
+					color: #fff !important
+					font-size: 15px
+					display: inline-block
+					background-image: linear-gradient(to right, #fff, #fff)
+					background-repeat: no-repeat
+					background-size: 0 2px
+					background-position: left bottom
+					transition: all 200ms ease-in-out
+					&:hover
+						background-size: 100% 2px
+			.dropdown
+				&-menu
+					padding: 10px 10px 15px
+					border-radius: 0
+					border-color: transparent
+					background-color: $green
+					box-shadow: none
+					&[data-bs-popper]
+					li + li
+						margin-top: 4px
+					li
+						&:hover,
+						&:focus
+							background-color: transparent !important
+				&-item
+					font-size: 13px
+					display: inline-block !important
+					&:hover,
+					&:focus
+						background-color: transparent !important
 						
 						
 						
@@ -175,7 +191,7 @@ main
 				color: $green
 		&__info
 			margin: 6px 0 20px
-			font-size: 12px
+			font-size: 13px
 			display: flex
 			flex-wrap: wrap
 			grid-gap: 20px
@@ -293,7 +309,7 @@ footer
 	padding: 20px
 	background-color: #fff
 	&__info
-		font-size: 12px
+		font-size: 13px
 		display: flex
 		flex-wrap: wrap
 		grid-gap: 20px
@@ -369,3 +385,55 @@ footer
 			text-decoration: underline
 			&:hover
 				text-decoration: none
+	.success
+		visibility: visible
+		opacity: 1
+		transition: all 300ms ease-in-out
+		&.none
+			position: absolute
+			visibility: hidden
+			opacity: 0
+	.all-comments
+		h4
+			span
+				font-size: 14px
+		.comment
+			margin: 0
+			padding: 20px
+			background-color: #fff
+			& + .comment
+				margin-top: 15px
+			&__info
+				margin-bottom: 12px
+				font-size: 13px
+				color: rgba(0,0,0, 0.6) !important
+				display: flex
+				flex-wrap: wrap
+				grid-gap: 20px
+				& i
+					color: rgba(0,0,0, 0.5) !important
+					margin-right: 4px
+				.date
+					margin-left: auto
+				.this-you
+					margin-left: 8px
+					padding: 1px 6px
+					color: #fff
+					font-size: 12px
+					font-style: italic
+					display: inline-block
+					border-radius: 4px
+					background-color: $gray
+				.this-admin
+					margin-left: 8px
+					padding: 1px 6px
+					color: #fff
+					font-size: 12px
+					font-style: italic
+					display: inline-block
+					border-radius: 4px
+					background-color: $green
+			&__text
+				font-size: 14px
+				p + p
+					margin-bottom: 20px
