--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -90,7 +90,7 @@ header
 			padding-left: 0
 			list-style: none
 			display: flex
-			grid-gap: 20px
+			grid-gap: 0 20px
 			.nav-item
 				position: relative
 				&:hover > .navbar-nav
