--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -194,7 +194,7 @@ main
 			font-size: 13px
 			display: flex
 			flex-wrap: wrap
-			grid-gap: 20px
+			grid-gap: 5px 20px
 			& i
 				color: rgba(0,0,0, 0.6)
 				margin-right: 4px
@@ -312,7 +312,7 @@ footer
 		font-size: 13px
 		display: flex
 		flex-wrap: wrap
-		grid-gap: 20px
+		grid-gap: 5px 20px
 		& i
 			color: rgba(0,0,0, 0.6)
 			margin-right: 4px
@@ -409,7 +409,7 @@ footer
 				color: rgba(0,0,0, 0.6) !important
 				display: flex
 				flex-wrap: wrap
-				grid-gap: 20px
+				grid-gap: 5px 20px
 				& i
 					color: rgba(0,0,0, 0.5) !important
 					margin-right: 4px
@@ -437,3 +437,13 @@ footer
 				font-size: 14px
 				p + p
 					margin-bottom: 20px
+					
+					
+// 404
+.page404
+	padding-top: 40px
+	h1
+		margin: 40px 0
+		color: $red
+		font-size: 62px !important
+	
