--- a/admin/assets/css/admin.sass
+++ b/admin/assets/css/admin.sass
@@ -1,7 +1,7 @@
 $gray: #5c5b5b
 $bg: #f6f6f6
-$green: #008484
-$green-hover: #006669
+$green: #7f41d7
+$green-hover: #7918bf
 
 body
 	font-size: 14px
